--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "dim": 4096,
     "sparsity": 32,
     "eps": 1.0,
-    "neighbor_dist": -1,
+    "neighbor_dist": 64,
     "delta": 0.000001,
     "type": "synthesis",
-    "Comment": "If neighbor_dist = -1, it means user-level LDP -- all k-sparse vectors are neighbors."
+    "Comment": "User-level LDP -> neighbor_dist = 2 * sparsity; Event-level LDP -> neighbor_dist = 2"
 }
